Migrated jdk to jdk11